@@ -1,11 +1,14 @@
 tagError=An error occurred while tagging the topic.
 
 badLogin=Login error! Maybe your password was incorrect? Try it again.
+badSavedLogin=Login failed. Maybe the password was changed?
 manualLoginRequired=There have been multiple unsuccessful login attempts from \
 your current IP address or against the account you are attempting to log in \
 to. Please log in manually instead of with GameFOX.
 cookieEaten=Somebody ate the cookie! This means that something unexpected \
 happened. Try it again.
+enterLogin=Enter universal username (or e-mail address) and password:
+enterPWLogin=Enter password for "%1$S":
 
 requestTimeout=The request timed out. Check your network connection and try \
 again.
